# dotfiles

./: .Xmodmap  .bash_aliases  .env_sample  .gitignore  .gitmodules  .prettierrc  .screenrc  .tmux.conf  .vimrc  Caddyfile  Justfile  README  README.md  airline-dracula.tmux  idempotent-install.sh  init.sh  init.vim  nvimrc  package-lock.json  package.json  pyproject.toml  run.py  tsconfig.app.json  vite.config.ts
.vim/: .netrwhist
.vim/syntax/: mkd.vim
UltiSnips/: javascript.snippets  markdown.snippets  vue.snippets
actions/: create_card.py  edit_hotkeys.sh  open_folder.sh  reduce_entropy.py  render_card.py  render_template.py  run_action.sh  run_in_terminal.sh  serve_api.py  serve_api.py.bak  slurp_cards.py
alacritty/: alacritty.toml  gruvbox-dark.toml
api/: INSTRUCTIONS.md  README.md  db.py  entities.py  files.py  main.py  selectors.py  services.py  settings.py  templates.py  users.py  utils.py
bspwm/: bspwmrc
chrome_plugin/: README.md  background.js  manifest.json
frontend/: App.vue  main.ts  styles.css
home/: bash_aliases  bashrc  tmux.conf
nvim/: lazy-lock.json
static/: styles.css
sxhkd/: sxhkdrc
templates/: action.html  action.md  base.html  dashboard.html  directory.html  error.html  folder.html  image.html  new_card.card  unified.html  users.html
tools/: __init__.py  args_to_json.py  ask_claude.sh  chmod_actions.sh  chmod_scripts.sh  create_card.sh  edit_hotkeys.sh  edit_in_terminal.sh  edit_nvim_config.sh  json_to_args.py  open_folder.sh  reload_hotkeys.sh  run_script.sh  select_action_fzf.sh  start_api.sh  top_cards.py
(+27 files in other folders)
